--- a/src/AppBundle/Resources/public/less/styles.less
+++ b/src/AppBundle/Resources/public/less/styles.less
@@ -64,8 +64,12 @@ a.btn-ghost, .btn-ghost {
         right: 30px;
         width: ~"calc(100% - 60px)";
         height: ~"calc(100% - 60px)";
+
+        .nav-bg{ opacity: 0.7}
     }
 }
+
+
 
 .loading-end{
     &.bordered{
