[Seed] Reworked home link

--- a/src/AppBundle/Resources/views/Home/index.html.twig
+++ b/src/AppBundle/Resources/views/Home/index.html.twig
@@ -35,7 +35,7 @@
                         data-endeasing="easeInOutQuad"
                         style="z-index: 2">
                             <strong>Charlie Breval paintings</strong><br>
-                            <a href="#" class="btn btn-ghost btn-blue btn-medium">&nbsp;View Paintings</a>
+                            <a href="{{ path('app_gallery') }}" class="btn btn-ghost btn-blue btn-medium">&nbsp;View Paintings</a>
                         </div>
 
                     </li> <!-- end first slide -->
