--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -91,24 +91,7 @@
 
 
 <!-- SCRIPTS -->
-<script type='text/javascript' src="{{ asset('files/js/retina.js') }}"></script>
-<script type='text/javascript' src="{{ asset('files/js/jquery.pace.js') }}"></script>
-<script type='text/javascript' src="{{ asset('files/js/jquery.easing.1.3.js') }}"></script>
-<script type='text/javascript' src="{{ asset('files/js/jquery.easing.compatibility.js') }}"></script>
-<script type='text/javascript' src="{{ asset('files/js/jquery.bgvideo.min.js') }}"></script>
-<script type='text/javascript' src="{{ asset('files/js/jquery.counter.min.js') }}"></script>
-<script type='text/javascript' src="{{ asset('files/js/jquery.fancybox.pack.js') }}"></script>
-<script type="text/javascript" src="{{ asset('files/rs-plugin/js/jquery.themepunch.tools.min.js') }} "></script>
-<script type="text/javascript" src="{{ asset('files/rs-plugin/js/jquery.themepunch.revolution.min.js') }} "></script>
-<script type='text/javascript' src="{{ asset('files/js/jquery.parallax.min.js') }}"></script>
-<script type='text/javascript' src="{{ asset('files/js/jquery.isotope.min.js') }}"></script>
-<script type='text/javascript' src="{{ asset('files/js/jquery.fitvids.min.js') }}"></script>
-<script type='text/javascript' src="{{ asset('files/js/jquery.scroll.min.js') }}"></script>
-<script type='text/javascript' src="{{ asset('files/js/jquery.visible.min.js') }}"></script>
-<script type='text/javascript' src="{{ asset('files/js/jquery.owl.carousel.min.js') }}"></script>
-<script type='text/javascript' src="{{ asset('files/js/pond-form.js') }}"></script>
-<script type='text/javascript' src="{{ asset('files/js/pond-header.js') }}"></script>
-<script type='text/javascript' src="{{ asset('files/js/script.js') }}"></script>
+<script type='text/javascript' src="{{ asset('compiled/app/scripts.min.js') }}"></script>
 <!-- SCRIPTS -->
 
 </body>
