--- a/src/AppBundle/Resources/public/less/styles.less
+++ b/src/AppBundle/Resources/public/less/styles.less
@@ -1,15 +1,16 @@
 .tp-caption{
     text-align: center;
-    
+
     strong {
         font-family: 'Playfair Display', serif;
-        font-size: 60%;
+        font-size: 100%;
         display: inline-block;
         line-height: 60px;
         font-weight: normal;
         opacity: 0.6;
         letter-spacing: 6px;
         text-transform: uppercase;
+        white-space: normal;
     }
 }
 
@@ -96,4 +97,15 @@ a.btn-ghost, .btn-ghost {
 }
 
 
+
+@media only screen and (max-width: 640px) {
+    .bordered .sticky-header, .bordered.big-border .sticky-header {
+        background: #f6f5ff;
+    }
+    .tp-caption strong{
+        letter-spacing: 1px;
+        line-height: 30px;
+        margin-bottom: 30px;
+    }
+}
 
