[seed] Reworked styles

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -19,15 +19,7 @@
 <!-- FONTS -->
 
 <!-- CSS -->
-<link rel="stylesheet" id="default-style-css"  href="{{ asset('files/css/style.css') }}" type='text/css' media='all' />
-<link rel='stylesheet' id='colored-style-css'  href="{{ asset('files/css/colored.css') }}" type='text/css' media='all' />
-<link rel="stylesheet" id="owlcarousel-style-css"  href="{{ asset('files/css/owl.carousel.css') }}" type='text/css' media='all' />
-<link rel="stylesheet" id="owltransitions-style-css"  href="{{ asset('files/css/owl.transitions.css') }}" type='text/css' media='all' />
-<link rel='stylesheet' id='fancybox-style-css'  href="{{ asset('files/css/fancybox.css') }}" type='text/css' media='all' />
-<link rel="stylesheet" id="fontawesome-style-css" href="{{ asset('files/css/font-awesome.min.css') }}" type="text/css" media="all" />
-<link rel="stylesheet" id='rsplugin-style-css' href="{{ asset('files/rs-plugin/css/settings.css') }}" type="text/css" media="all" />
-<link rel="stylesheet" id="pe-icons-style-css" href="{{ asset('files/css/pe-icon-7-stroke.css') }}" type="text/css" media="all" />
-<link rel="stylesheet" id="mqueries-style-css"  href="{{ asset('files/css/mqueries.css') }}" type='text/css' media='all' />
+<link rel="stylesheet" href="{{ asset('compiled/app/libs.min.css') }}" type='text/css' media='all' />
 <link rel="stylesheet" href="{{ asset('compiled/app/styles.min.css') }}" type='text/css' media='all' />
 <!-- CSS -->
 
@@ -91,7 +83,7 @@
 
 
 <!-- SCRIPTS -->
-<script type='text/javascript' src="{{ asset('compiled/app/scripts.min.js') }}"></script>
+<script type='text/javascript' src="{{ asset('compiled/app/libs.min.js') }}"></script>
 <!-- SCRIPTS -->
 
 </body>
