[seed] Reworked styles

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -19,7 +19,7 @@
 <!-- FONTS -->
 
 <!-- CSS -->
-<link rel="stylesheet" href="{{ asset('compiled/app/libs.min.css') }}" type='text/css' media='all' />
+<link rel="stylesheet" href="{{ asset('files/css/compiled.min.css') }}" type='text/css' media='all' />
 <link rel="stylesheet" href="{{ asset('compiled/app/styles.min.css') }}" type='text/css' media='all' />
 <!-- CSS -->
 
