[Seed] Accent on home

--- a/src/AppBundle/Resources/views/Home/index.html.twig
+++ b/src/AppBundle/Resources/views/Home/index.html.twig
@@ -34,7 +34,7 @@
                         data-endspeed="800"
                         data-endeasing="easeInOutQuad"
                         style="z-index: 2">
-                            <strong>Charlie Breval paintings</strong><br>
+                            <strong>Charlie Bréval paintings</strong><br>
                             <a href="{{ path('app_gallery') }}" class="btn btn-ghost btn-blue btn-medium">&nbsp;View Paintings</a>
                         </div>
 
