[Seed] Reworked and added translations

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -29,6 +29,8 @@
 
 <!-- JQUERY LIBRARY -->
 <script src="{{ asset('files/js/jquery-1.9.1.min.js') }}"></script>
+<script src="{{ asset('files/js/jquery.easing.1.3.js') }}"></script>
+<script src="{{ asset('files/js/jquery.easing.compatibility.js') }}"></script>
 <!-- JQUERY LIBRARY -->
 
 </head>
