--- a/app/Resources/views/footer.html.twig
+++ b/app/Resources/views/footer.html.twig
@@ -6,7 +6,7 @@
             <li class="instagram"><a target="_blank" href="https://www.instagram.com/charlie_breval"></a></li>
         </ul>
         <div class="copyright right-float">
-            Contents rights to Charlie Bréval
+            {{ "Contents rights to Charlie Bréval" | trans }}
         </div>
     </div>
 </footer>
