[seed] Removed description on painting

--- a/src/AppBundle/Resources/views/Gallery/index.html.twig
+++ b/src/AppBundle/Resources/views/Gallery/index.html.twig
@@ -22,7 +22,7 @@
                             <div class="overlaycaption">
                                 <h5 class="overlay-name title-minimal"><strong>{{ painting.title }}</strong></h5>
                                 <div class="separator-small"><span></span></div>
-                                <h6 class="alttitle">Oil on canvas</h6>
+                                <h6 class="alttitle">{{'Oil on canvas'|trans}}</h6>
                             </div>
                             <a href="{{ asset(painting.image) }}" class="openfancybox" rel="gallery1">
                             </a>
