--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -9,7 +9,15 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Home Portfolio | Pond | Creative Page Template</title>
+
+{% block meta_title %}
+<title>{{'home.title'|trans }}</title>
+{% endblock %}
+
+{% block meta_description %}
+    <meta name="description" content="{{'home.description'|trans}}" />
+{% endblock %}
+
 <!-- DEFAULT META TAGS -->
 
 <!-- FONTS -->
@@ -24,7 +32,7 @@
 <!-- CSS -->
 
 <!-- FAVICON -->
-<link rel="shortcut icon" href="{{ asset('files/uploads/favicon.png') }}"/>
+<link rel="shortcut icon" href="{{ asset('files/uploads/favicon.ico') }}"/>
 <!-- FAVICON -->
 
 <!-- JQUERY LIBRARY -->
