--- a/src/AppBundle/Resources/views/Blog/index.html.twig
+++ b/src/AppBundle/Resources/views/Blog/index.html.twig
@@ -1,5 +1,13 @@
 {% extends 'base.html.twig' %}
 
+{% block meta_title %}
+<title>{{'blog.title'|trans }}</title>
+{% endblock %}
+
+{% block meta_description %}
+    <meta name="description" content="{{'blog.description'|trans}}" />
+{% endblock %}
+
 {% block body %}
         <!-- BLOG SECTION -->
         <section id="blog">
