--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -93,7 +93,9 @@
 
 
 <!-- SCRIPTS -->
+{% block javascripts %}
 <script type='text/javascript' src="{{ asset('compiled/app/libs.min.js') }}"></script>
+{% endblock %}
 <!-- SCRIPTS -->
 
 </body>
