[seed] Fixed about page

--- a/src/AppBundle/Resources/public/less/styles.less
+++ b/src/AppBundle/Resources/public/less/styles.less
@@ -1,3 +1,10 @@
+#page-title{
+    .section-video-title{
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+}
+
 .tp-caption{
     text-align: center;
 
