--- a/src/AppBundle/Resources/views/About/index.html.twig
+++ b/src/AppBundle/Resources/views/About/index.html.twig
@@ -14,10 +14,9 @@
                 <div class="split-left split-half">
                     <div class="split-mini-content">
                         <div class="spacer spacer-medium"></div>
-                        <h5 class="title-minimal">Agency</h5>
+                        <h5 class="title-minimal">{{ 'about_page.title'|trans }}</h5>
                         <div class="spacer spacer-mini"></div>
-                        <p><strong>Pond</strong> is a premium Template which has been crafted to perfection. It is the ideal way to make your project stand out from the crowd.  Ferri reque integre mea ut, eu eos vide errem noluise se.</p>
-                        <p>Putent laoreet et ius dissentias ut et ius eos vide.  Praesent augue arcu, ornare ut tincidunt eu, mattis a libero. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                        {{ 'about_page.description'|trans|raw }}
                         <div class="spacer spacer-medium"></div>
                     </div>
                 </div> <!-- END .split-right -->
