--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -56,7 +56,7 @@
 <div id="page-loader" class="text-light">
     <div class="page-loader-inner">
         {# <div class="loader-logo-name"><img src="{{ asset('files/uploads/pond-logo-light.png') }}" alt="Logo"/></div> #}
-        <h6 class="alttitle title-minimal">Loading</h6>
+        <h6 class="alttitle title-minimal">Chargement</h6>
     </div>
 </div>
 <!-- PAGELOADER -->
