Add file for about me

--- a/src/AppBundle/Resources/views/About/index.html.twig
+++ b/src/AppBundle/Resources/views/About/index.html.twig
@@ -22,7 +22,7 @@
                 </div> <!-- END .split-right -->
 
                 <div class="split-right split-half">
-                    <div class="split-bg" style="background:url(files/uploads/1690x1100.jpg) center center; background-size:cover;"></div>
+                    <div class="split-bg" style="background:url({{ asset('files/uploads/1690x1100.jpg') }}) center center; background-size:cover;"></div>
                 </div> <!-- END .split-left -->
             </div> <!-- END .split-section -->
         </div>
