--- a/src/AppBundle/Resources/views/Home/index.html.twig
+++ b/src/AppBundle/Resources/views/Home/index.html.twig
@@ -7,7 +7,7 @@
                        data-videofile="videos/home"
                        data-videowidth="1280"
                        data-videoheight="720"
-                       data-videoposter="files/uploads/1690x1100.jpg"
+                       data-videoposter="{{ asset('files/uploads/1690x1100.jpg') }}"
                        data-videoparallax="false"
                        data-videooverlaycolor="#000000"
                        data-videooverlayopacity="0.6"
