--- a/src/AppBundle/Resources/public/less/styles.less
+++ b/src/AppBundle/Resources/public/less/styles.less
@@ -1,3 +1,24 @@
+
+*, button, a {
+    -webkit-font-smoothing: antialiased;
+}
+a.logo{
+    font-family: 'Pathway Gothic One', sans-serif;
+    font-size: 26px;
+    margin: 0;
+    line-height: 23px;
+    text-transform: uppercase;
+    font-weight: 400;
+    &:visited, &:focus{ color: #3C3C3C;}
+    span.breval{
+        display: inline-block;
+        background: #3C3C3C;
+        color: #FFF;
+        line-height: 29px;
+        margin-left: 3px;
+    }
+}
+
 #page-title{
     .section-video-title{
         padding-top: 60px;
@@ -19,6 +40,13 @@
         text-transform: uppercase;
         white-space: normal;
     }
+}
+
+.tab-like ul.tab-like-nav li a.bold{
+    font-weight: bold;
+}
+.tab-like ul.tab-like-nav li a.light{
+    color: #828282;
 }
 
 a.btn-ghost, .btn-ghost {
