--- a/src/AppBundle/Resources/public/less/styles.less
+++ b/src/AppBundle/Resources/public/less/styles.less
@@ -50,8 +50,10 @@ a.logo{
 }
 
 a.btn-ghost, .btn-ghost {
-  margin-right: 1em; /* remove this while use*/
-  margin-bottom: 1em; /* remove this while use*/
+    font-family: 'Pathway Gothic One', sans-serif;
+    margin-top: 23px;
+    margin-right: 1em; /* remove this while use*/
+    margin-bottom: 1em; /* remove this while use*/
     display: inline-block;
     outline: none;
     text-align: center;
@@ -61,7 +63,7 @@ a.btn-ghost, .btn-ghost {
     border: 2px solid;
     transition: all 0.2s ease;
     box-sizing: border-box;
-    font-size: 14px;
+    font-size: 21px;
     padding: 0 15px;
     line-height: 50px;
     opacity: 0.5;
