--- a/src/AppBundle/Resources/public/less/styles.less
+++ b/src/AppBundle/Resources/public/less/styles.less
@@ -59,6 +59,7 @@ a.btn-ghost, .btn-ghost {
     text-align: center;
     text-decoration: none;
     font-weight: normal;
+    letter-spacing: 3px;
     vertical-align: middle;
     border: 2px solid;
     transition: all 0.2s ease;
