--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -18,8 +18,8 @@
     <meta name="description" content="{{'home.description'|trans}}" />
 {% endblock %}
 
+{% block stylesheets %}
 <!-- DEFAULT META TAGS -->
-
 <!-- FONTS -->
 <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
@@ -41,6 +41,7 @@
 <script src="{{ asset('files/js/jquery.easing.1.3.js') }}"></script>
 <script src="{{ asset('files/js/jquery.easing.compatibility.js') }}"></script>
 <!-- JQUERY LIBRARY -->
+{% endblock %}
 
 </head>
 
