--- a/src/AppBundle/Resources/public/less/styles.less
+++ b/src/AppBundle/Resources/public/less/styles.less
@@ -91,6 +91,9 @@ a.btn-ghost, .btn-ghost {
     }
 }
 
+.lg-backdrop{ z-index: 100140;}
+.lg-outer{ z-index: 100141;}
+
 #fancybox-lock{
     z-index: 100050;
 }
