--- a/src/AppBundle/Resources/public/less/styles.less
+++ b/src/AppBundle/Resources/public/less/styles.less
@@ -146,6 +146,23 @@ a.btn-ghost, .btn-ghost {
 
 }
 .tab-like ul.tab-like-nav li a:hover:after, .tab-like ul.tab-like-nav li a.active:after {width: 100%;margin-left: -50%;}
+#pagination-section{
+    .section-inner{ padding-top: 40px; padding-bottom: 30px;}
+}
+ul.pagination {
+    display: inline-block;
+    li{
+        font-weight: bold;
+        a {color: #696969; padding: 10px 15px; display: block;}
+        float: left;
+        list-style-type: none;
+        margin-top: 0;
+        border-top: 1px solid #696969;
+        border-bottom: 1px solid #696969;
+        border-right: 1px solid #696969;
+        &:first-child{ border-left: 1px solid #696969;}
+    }
+}
 
 
 
