--- a/src/AppBundle/Resources/views/Gallery/index.html.twig
+++ b/src/AppBundle/Resources/views/Gallery/index.html.twig
@@ -14,9 +14,9 @@
         <div class="section-inner">
             <div id="lightgallery" class="masonry gallery-entries clearfix" data-maxitemwidth="500">
                 {% for painting in paintings %}
-                <a href="{{ asset(painting.image) }}" class="masonry-item">
-                    <img src="{{ asset(painting.thumbnail) }}" />
-                </a>
+                    <a href="{{ asset(painting.image) }}" class="masonry-item">
+                        <img src="{{ asset(painting.thumbnail) }}" />
+                    </a>
                 {% endfor %}
             </div>
         </div>
@@ -26,7 +26,7 @@
         <div class="section-inner align-center">
               <ul class="pagination">
                 {% for i in range(1, nbPages) %}
-                    <li class="page-item"><a class="page-link" href="{{ path('app_gallery', {'page': i, '_locale': app.request.locale}) }}">1</a></li>
+                    <li class="page-item"><a class="page-link" href="{{ path('app_gallery', {'page': i, '_locale': app.request.locale}) }}">{{ i }}</a></li>
                 {% endfor %}
               </ul>
         </div>
