--- a/src/AppBundle/Resources/public/less/styles.less
+++ b/src/AppBundle/Resources/public/less/styles.less
@@ -145,6 +145,8 @@ a.btn-ghost, .btn-ghost {
     }
 
 }
+
+.grid-sizer { width: 33.333%; }
 .tab-like ul.tab-like-nav li a:hover:after, .tab-like ul.tab-like-nav li a.active:after {width: 100%;margin-left: -50%;}
 #pagination-section{
     .section-inner{ padding-top: 40px; padding-bottom: 30px;}
@@ -152,6 +154,7 @@ a.btn-ghost, .btn-ghost {
 ul.pagination {
     display: inline-block;
     li{
+        &.disabled{ display: none;}
         font-weight: bold;
         a {color: #696969; padding: 10px 15px; display: block;}
         float: left;
